--- a/paginaperros.html
+++ b/paginaperros.html
@@ -12,7 +12,7 @@
          sino también una nueva oportunidad de vida. El personal y los voluntarios trabajan incansablemente para rehabilitar
           a estos fieles amigos y prepararlos para un futuro lleno de esperanza. Entre paseos por los jardines y sesiones de juegos,
            se tejen historias de superación y vínculos que perduran más allá de las paredes del refugio. Es un santuario donde los corazones
-            rotos sanan y donde las patas cansadas encuentran un camino hacia un hogar lleno de cariño y protección.</h3>
+            rotos sanan y donde las patas cansadas encuentran un camino hacia un hogar lleno de cariño.</h3>
 </body>
 
 </html>
