cambiando toda la hoja de estilos y añaniendo un h3 al html

--- a/paginaperros.html
+++ b/paginaperros.html
@@ -3,16 +3,29 @@
 <head>
     <title>Refugio canino</title>
     <meta charset="UFT-8">
-    <link rel="stylesheet" type="text/css" href="pagina de prueba.css" >
+    <link rel="stylesheet" type="text/css" href="paginaperros.css" >
 </head>
 <body>
-    <center> <h1>Refugio canino</h1> </center>
+    <h1>Refugio canino</h1>
+    <section>
+    <div class="wrapper"></div>
+    <div class="box vertical">
     <h3>En el Refugio Canino, los días transcurren entre ladridos de alegría y miradas de gratitud.
         Cada rincón está impregnado de amor y dedicación, donde los perros rescatados encuentran no solo refugio,
          sino también una nueva oportunidad de vida. El personal y los voluntarios trabajan incansablemente para rehabilitar
           a estos fieles amigos y prepararlos para un futuro lleno de esperanza. Entre paseos por los jardines y sesiones de juegos,
            se tejen historias de superación y vínculos que perduran más allá de las paredes del refugio. Es un santuario donde los corazones
-            rotos sanan y donde las patas cansadas encuentran un camino hacia un hogar lleno de cariño.</h3>
-</body>
+           rotos sanan y donde las patas cansadas encuentran un camino hacia un hogar lleno de cariño.</h3>
+          </div>
+    </section>
+    <section>
+       <h3>En Patas Felices, nos dedicamos fervientemente a rescatar perros abandonados, maltratados o en riesgo,
+     proporcionándoles una segunda oportunidad en la vida.
+      Nuestra misión es clara: ofrecerles atención médica integral, alimentación adecuada y, sobre todo, mucho amor
+       y cuidado mientras esperan encontrar un hogar definitivo.</h3>
+    
 
+    
+</section>
+    </body>
 </html>
