insertarmos una imagen y modificamos el .caja para convertirlo en un futuro indice

--- a/paginaperros.html
+++ b/paginaperros.html
@@ -9,8 +9,17 @@
     <section>
         <div class="wrapper"></div>
     <div class="caja left">
-        <h1>Refugio canino</h1>
+        <h2></h2>
+        
     </div>
+    </section>
+    <section>
+        <div class="wrapper"></div>
+        <div class="image">
+        <img src="DOGTIEHT.jpg" alt="firstimg"
+      srcset="DOGTIEHT.jpg 2x" width="1904x" 
+             height="625px">
+            </div>
     </section>
     <section>
     <div class="wrapper"></div>
