SE AGREGA INFORMACION A LA PAGINA Y SE ORDENAN ALGUNAS POSICIONES DE DIV

--- a/HECTORYKENNY2[servicios]/servicios.html
+++ b/HECTORYKENNY2[servicios]/servicios.html
@@ -19,14 +19,14 @@
             <h1>Nuestros servicios</h1>
         </div>
     </section>
-    <section>
+    <section class="box">
         <div class="wrapper"></div>
     <div class="image right">
         <img src="DOG SERVICES.png" alt="servicesimg"
       srcset="DOG SERVICES.png 2x" width="500x" 
              height="625px">
     </div>
-    <div class="texto left">
+    <div class="texto1 center ">
         <h3>Sabemos lo importante que es para ti garantizar el bienestar de tus perros
             mientras estás lejos, por eso nos comprometemos a ofrecer un ambiente acogedor
             y lleno de atenciones para que se sientan como en casa. Con personal experimentado
@@ -35,7 +35,59 @@
         </h3>
     </div>
     </section>
+    <section class="box">
+        <div class="wrapper"></div>
+        <div class="TITLE1">
+            <H1>Habitaciones Privadas:</H1></div>
+            <div class="texto2"><h3>Ofrecemos habitaciones espaciosas y cómodas,
+                equipadas con camas confortables y juguetes para que tu perro se sienta como en
+                casa. Cada habitación cuenta con su propia área de descanso y acceso a espacios
+                exteriores para que puedan jugar y disfrutar del aire fresco.</h3>
+        </div>
 
+        <div class="TITLE1">
+            <H1>Alimentación Personalizada:</H1></div>
+            <div class="texto2"><h3>Nos adaptamos a las necesidades dietéticas específicas de
+                cada perro. Ya sea que requieran una dieta especial, comida casera o alimentos
+                particulares, nuestro personal está capacitado para garantizar que reciban la
+                alimentación adecuada y en los horarios establecidos por sus dueños.
+
+            </h3>
+        </div>
+
+        <div class="TITLE1">
+            <H1>Actividades Recreativas:</H1></div>
+            <div class="texto2"><h3>Organizamos actividades diarias para mantener a los perros
+                activos y felices. Desde paseos por nuestros jardines hasta sesiones de juego
+                con otros huéspedes, nos aseguramos de que tengan una experiencia divertida y
+                estimulante durante su estancia.</h3>
+        </div>
+
+        <div class="TITLE1">
+            <H1>Servicios Médicos y de Cuidado Especializado:</H1></div>
+            <div class="texto2"><h3>Contamos con veterinarios de confianza disponibles para
+                atender cualquier emergencia médica que pueda surgir. Además, ofrecemos cuidados
+                especiales para perros mayores o con necesidades específicas, asegurando que
+                reciban la atención personalizada que merecen.</h3>
+        </div>
+
+        <div class="TITLE1">
+            <H1>Servicio de Spa y Estética:</H1></div>
+            <div class="texto2"><h3>Para aquellos que desean consentir a su perro, ofrecemos
+                servicios de spa que incluyen baños relajantes, cepillado, cortes de pelo y
+                cuidado de uñas. Nuestros estilistas caninos están capacitados para adaptarse
+                a las preferencias estéticas de cada cliente.
+
+            </h3>
+        </div>
+
+        <div class="TITLE1">
+            <H1>Servicio de Transporte y Recogida:</H1></div>
+            <div class="texto2"><h3>Facilitamos el transporte de tu perro hacia y desde nuestro
+                hotel con nuestro servicio de recogida y entrega. Garantizamos un viaje seguro
+                y cómodo para que tanto tú como tu mascota puedan estar tranquilos.</h3>
+        </div>
+    </section>
 </body>
 
 
